# decoder-inference-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: architecture.md  d2_review.md  learning_gates.md  progress.md  task_plan.md
artifacts/: d1_environment.json
configs/: lab.yaml  smoke.yaml
docs/plans/: 2026-07-18-d2-scaffold.md  2026-07-19-causal-self-attention-bplus.md
docs/specs/: 2026-07-19-causal-self-attention-bplus-design.md
docs/superpowers/plans/: 2026-07-19-decoder-only-transformer.md  2026-07-19-pre-norm-transformer-block.md  2026-07-19-rmsnorm.md
docs/superpowers/specs/: 2026-07-19-decoder-only-transformer-design.md  2026-07-19-pre-norm-transformer-block-design.md  2026-07-19-rmsnorm-design.md
scripts/: train_tiny_corpus.py  verify_environment.py
src/decoder_inference_lab/: __init__.py  config.py  data.py  generation.py
src/decoder_inference_lab/model/: OWNERSHIP.md  attention.py  block.py  decoder.py  mlp.py
src/decoder_inference_lab/training/: loss.py  overfit.py
src/infermatrix_model_lab/: __init__.py  config.py  data.py  generation.py
src/infermatrix_model_lab/model/: attention.py  block.py  decoder.py  mlp.py  (+1 more)
tests/: test_attention.py  test_attention_backward.py  test_attention_cache.py  test_attention_causal.py  test_attention_cuda.py  test_block.py  test_block_cuda.py  test_causal_mask.py  test_config.py  test_data.py  test_decoder.py  test_decoder_cuda.py  test_generation.py  test_loss.py  test_mlp.py  test_norm.py  test_norm_cuda.py  test_overfit.py  test_tokenizer_eos.py  test_train_step.py
(+2 files in other folders)
