[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decoder-inference-lab"
version = "0.1.0"
description = "Decoder-only Transformer learning and inference measurement lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0,<7.0",
    "torch==2.12.1",
]

[project.optional-dependencies]
dev = [
    "numpy>=2.0,<3.0",
    "pytest>=8.0,<10.0",
    "ruff>=0.8,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
